PlugModCore, almost ready for béta